[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.4"
solana-validator = { version = "=1.7.4", optional = true }
zeroize = "=1.3.0"

[features]
no-entrypoint = []
test-bpf = []
# test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.7.4"
solana-sdk = "=1.7.4"
zeroize = "=1.3.0"

[lib]
crate-type = ["cdylib", "lib"]
